tests-integration/tests/custom/semantic-errors/keyword-as-identifiers-02/stderr.expected
Error:
    model.eprime:1:9:
  |
1 | find x: letting
  |         ^^^^^^^
Error: Declaration without any members

model.eprime:1:9:
  |
1 | find x: letting
  |         ^
Missing Domain


